# athenaeum

./: .gitignore  ADDRESS_BAR_UI_AND_SHORTCUT_FIXES.md  AGENTS.md  CLAUDE.md  DEBUG_MULTI_SELECT.md  FEATURE_MULTI_SELECT.md  FINAL_FIX_SUMMARY.md  FINAL_OPTIMIZATIONS.md  IMPLEMENTATION_FIXED.md  README.md  TAB_UI_IMPROVEMENTS.md  TAB_UI_REVIEW_AND_FIXES.md  USECALLBACK_FIX.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.test.json  vite.config.ts
.agents/skills/sfm-architecture-guard/: SKILL.md
.agents/skills/sfm-react-workspace-ui/: SKILL.md
.agents/skills/sfm-rust-fs-ops/: SKILL.md
.agents/skills/sfm-tauri-ipc-contract/: SKILL.md
.temp/: bottom-information-panel-tabs-design.md  design.md  file-operation-task-conflict-undo-design.md  navigation-tab-design.md
docs/: design.md
scripts/: build.mjs  dev-server.mjs  dev-server.test.mjs  dev.mjs  run-build.mjs  test.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: default.toml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  operations.rs  remote.rs  search.rs  settings.rs  workspace.rs
src-tauri/src/domain/: models.rs
src-tauri/src/services/: fs_service.rs  icon_service.rs  metadata_store.rs  mod.rs  operation_service.rs  remote_service.rs  search_service.rs  settings_store.rs  windows_shell.rs
src-tauri/src/services/remote_service/: windows_credentials.rs
src/app/: AppShell.tsx  mockData.ts  types.ts
src/lib/: tauri.ts
src/styles/: theme.css  workspace.css
(+76 files in other folders)
